# midas-cli

./: Cargo.toml  roadmap.md
src/: add.rs  coin_types.rs  constants.rs  database.rs  delete.rs  gold_price.rs  helpers.rs  list.rs  main.rs  populate_table.rs  table.rs  types.rs  uid.rs
