[package]
name = "midas-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "midas"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.7"